<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="93pt"
        android:src="@drawable/andela2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="114pt"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="Frank Harerimana"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="134pt"
        android:background="#000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="144pt"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/track"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="164pt"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/country"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="184pt"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/email"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="204pt"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/phone_number"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="225pt"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/slack_username"/>

</RelativeLayout>