<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="24pt"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:text="@string/the_andela_learning_community" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="94pt"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/technology_leaders"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginLeft="59pt"
        android:layout_marginTop="144pt"
        android:gravity="center"
        android:textColor="#000"
        android:text="Join Us !"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="194pt"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/what_is_ALC"/>


</RelativeLayout>