<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:clickable="true">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">


       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="15dp"
           android:layout_marginTop="24pt"
           android:textSize="40sp"
           android:textStyle="bold"
           android:textColor="#000"
           android:text="@string/welcome_to_alc_4_0" />

       <Button
           android:id="@+id/profile"
           android:layout_width="179dp"
           android:layout_height="75dp"
           android:layout_gravity="center"
           android:gravity="center"
           android:textSize="29sp"
           android:layout_marginLeft="115dp"
           android:layout_marginTop="154pt"
           android:background="#ffaf2f"
           android:text="@string/my_profile" />

       <Button
           android:id="@+id/about"
           android:layout_width="179dp"
           android:padding="0dp"
           android:textSize="29sp"
           android:background="#ffaf2f"
           android:layout_height="75dp"
           android:layout_marginLeft="115dp"

           android:layout_marginTop="117pt"
           android:text="@string/about_alc"
           android:layout_gravity="center" />
   </RelativeLayout>

</LinearLayout>